# camoufox-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  test_server.py
src/camoufox_mcp/: __init__.py  config.py  instrumentation.py  logging.py  metrics.py  models.py  server.py  session.py  validation.py
src/camoufox_mcp/tools/: __init__.py  accessibility.py  analysis.py  assertions.py  browser.py  compound.py  debug.py  emulation.py  extraction.py  frames.py  interaction.py  javascript.py  mouse.py  navigation.py  network.py  pdf.py  performance.py  registration.py  screenshot.py  storage.py  tracing.py  waiting.py
tests/: __init__.py  conftest.py  test_config.py  test_instrumentation.py  test_integration.py  test_logging.py  test_metrics.py  test_models.py  test_server.py  test_session.py  test_validation.py
