[project]
name = "camoufox-mcp"
version = "0.1.0"
description = "MCP server for Camoufox browser automation and web scraping"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camoufox>=0.4.11",
    "mcp>=1.25.0",
    "playwright>=1.57.0",
]

[project.scripts]
camoufox-mcp = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
