[project]
name = "camoufox-mcp"
version = "0.2.0"
description = "Production-ready MCP server for Camoufox browser automation and web scraping analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camoufox>=0.4.11",
    "mcp>=1.25.0",
    "playwright>=1.57.0",
    "structlog>=24.1.0",
    "pydantic>=2.0.0",
]

[project.scripts]
camoufox-mcp = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
